Bug #9428
openZFS pool import should ignore unparseable devids
0%
Description
Since this commit - https://github.com/zfsonlinux/zfs/commit/39fc0cb5577e409f415e25d35a452b46996c08b1 - ZFS on Linux has begun to populate devid field in the leaf vdev labels with values that cannot be parsed by ddi_devid_str_decode().
For example:
- usb-General_UDisk-0:0-part1
- scsi-350000394a8ca4fbc-part1
- dm-uuid-mpath-35000c5006304de3f
As a result, pools created on Linux can no longer be imported into illumos. If a devid cannot be parsed, it should be ignored (as we already do for root pools).
Updated by Andy Fiddaman about 4 years ago
Updated by Tõivo Leedjärv almost 2 years ago
The solution to this issue was apparently never merged.
I tried to import a pool created in Linux and was successful only after clearing out devids (#9683). Having managed to import the pool, there have been no problems (I've been careful with enabling features). There is clearly good interoperability, once you manage to get past the import.
Will the proposed solution be merged?